Fix scrollbar fuckup

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -12,7 +12,7 @@ a:visited
   color: darken(#ce5a4e, 10%)
 
 ::-webkit-scrollbar
-  opacity: 0
+  width: 0px
 
 $body-width: 900px
 $num-manifestos: 4
